<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/et_todo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/enter_title"
                android:singleLine="true"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_todo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_todo_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/et_todo_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:singleLine="true"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_todo_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/til_todo_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_5sdp">

            <EditText
                android:id="@+id/et_todo_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/tags"
                android:singleLine="true"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_todo_due_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            android:text="@string/pick_a_due_date"
            app:layout_constraintTop_toBottomOf="@id/til_todo_tags"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_8sdp"/>


        <TextView
            android:id="@+id/tv_todo_due_time"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="@dimen/_15sdp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_todo_due_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/pick_a_due_time"
            android:layout_below="@id/tv_todo_due_date"
            android:layout_marginTop="@dimen/_8sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>